# WebVOWL-Reimagined

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  build_mimalloc.sh  docker-compose.yml  global-paths.ts  package-lock.json  package.json  rspack.config.dev.ts  rspack.config.ts  rust-analyzer.toml  rust-toolchain.toml  test.sh  tsconfig.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: -dev--requirements.md
.github/workflows/: docker-publish.yml
crates/database/: Cargo.toml  README.md  owl1-compatible-simple.owl  owl1-compatible.owl  owl1-unions-simple.owl  owl1-unions.owl
crates/database/data/owl-rdf/: foaf.owl
crates/database/src/: errors.rs  lib.rs  main.rs  serializers.rs  store.rs  vocab.rs
crates/database/src/serializers/: formats.rs  frontend.rs  new_ser.rs  vowl_extract.rs
crates/database/src/serializers/formats/: graph_display.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: errors.rs  lib.rs  owl.rs  parser_util.rs
crates/perfdebugger/: Cargo.toml  README.md
crates/perfdebugger/src/: lib.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  blocks.rs  lib.rs
crates/server/src/blocks/: right_side_bar.rs
crates/server/src/components/menu/: mega_menu.rs  vertical_menu.rs
crates/server/src/example/: ontology_cargo_toml.toml  ontology_upload_example.rs
crates/sparql_queries/: Cargo.toml
crates/sparql_queries/src/: assembly.rs  default.rq  default.rs  default_compact.rq  default_query.rs  element_type_injection.rs  filter_menu_patterns.rs  general.rs  lib.rs  snippets.rs  testing.rq  testing.rs  testing2.rq
crates/sparql_queries/src/reference/: default.rq
crates/sparql_queries/src/snippets/: general.rs  void.rs
crates/util/: Cargo.toml  README.md
crates/util/src/: datatypes.rs
src/: app.rs  blocks.rs  components.rs  cookie_handler.rs  extractor.rs  hydration_scripts.rs  lib.rs  main.rs  network.rs  session_handler.rs  signals.rs  sparql_queries.rs
src/assets/: about_description.txt
src/assets/scripts/: island_script.js
src/blocks/: right_side_bar.rs  workbench.rs
src/blocks/workbench/: about_menu.rs  export_menu.rs  filter_menu.rs  ontology_menu.rs  options_menu.rs  search_menu.rs
src/blocks/workbench/filter_menu/: classes.rs  element_legend_injection.rs  filtergroup.rs  filtertype.rs  meta_filter.rs  properties.rs  special_operators.rs
src/buttons/: mod.rs
src/components/: about_description.txt  buttons.rs  icon.rs  lists.rs  menu.rs  progress_bar.rs  theme.rs  tooltip.rs  user_input.rs  zoom_slider.rs
src/components/buttons/: center_graph_button.rs  graph_interaction_buttons.rs  locate_button.rs  pause_button.rs  reset_button.rs  search.rs  work_bench_buttons.rs  zoom_buttons.rs
src/components/menu/: about_menu.rs  export_menu.rs  filter_menu.rs  modes_menu.rs  ontology_menu.rs  options_menu.rs  right_side_bar.rs  search_menu.rs  side_bar.rs  workbench.rs
src/components/menu/workbench/: filter_menu.rs  ontology_menu.rs  options_menu.rs  search_menu.rs
src/components/user_input/: file_upload.rs  range_select.rs
src/example/: ontology_upload_example.rs
src/pages/: home.rs
src/scripts/: hydration_script.js  islands_routing.js
src/signals/: menu_signals.rs
src/sparql_queries/: default.rq  default.rs  filter_menu_patterns.rs  general.rs  testing.rq  testing.rs
src/static/: index.html
style/: canvas.scss  centergraph.scss  filter_menu.scss  filtermenu.scss  graph_interact_buttons.scss  main.scss  pausebutton.scss  resetbutton.scss  sidebar.scss  tailwind.css  test.scss  workbench.scss  zoombuttons.scss  zoomslider.scss
style/webkit/: slider.scss
tests/end2end/: package.json  playwright.config.ts
tests/manual/: test.js
tests/manual/src/: io.rs  web.rs
tests/manual/src/graph/: build.rs
