[package]
    authors=["TheRealMorgenfrue"]
    description="Database code for WebVOWL Reimagined"
    edition="2024"
    keywords=["rdf", "graph", "sparql", "datafusion"]
    license-file="LICENSE"
    name="webvowl-database"
    readme="README.md"
    repository="https://github.com/WebVOWL/WebVOWL-Reimagined"
    version="0.0.1"

[lib]
    crate-type=["cdylib", "rlib"]


[dependencies]
    env_logger="0.11"
    fluent-uri="0.4.1"
    futures="0.3.31"
    horned-owl={git="https://github.com/phillord/horned-owl", rev="c4f7835ecae70b5e7281dc23b9b7fc6daa497f1d"}
    log="0.4"
    memchr="2.7.6"
    oxrdf="0.3.1"
    rdf-fusion="0.1.0"
    rkyv="0.8.12"
    smallvec={version="1.15.1", features=["union"]}
    tempfile="3.10"
    test-generator="^0.3"
    tokio="1.48.0"
    webvowl-parser={path="../parser"}

    [dependencies.grapher]
        # branch="new_nodetype"
        features=["webgl"]
        git="https://github.com/WebVOWL/WasmGrapher"
        # optional=true
        # path="../../../RustGrapher"
        # version="0.3"
