[package]
    authors=["TheRealMorgenfrue", "LouiseWolff17", "khmikkelsen"]
    description="Database code for VOWL-R"
    edition="2024"
    keywords=["rdf", "graph", "sparql", "datafusion"]
    license-file="LICENSE"
    name="vowlr-database"
    readme="README.md"
    repository="https://github.com/WebVOWL/WebVOWL-Reimagined"
    version="0.1.0"

[lib]
    crate-type=["cdylib", "rlib"]


[dependencies]
    env_logger={workspace=true}
    fluent-uri="0.4.1"
    futures={workspace=true}
    grapher={workspace=true}
    horned-owl={workspace=true}
    log={workspace=true}
    memchr="2.7.6"
    oxrdf="0.3.1"
    rdf-fusion={workspace=true}
    smallvec={workspace=true}
    tempfile="3.10"
    test-generator="^0.3"
    tokio={workspace=true}
    vowlr-parser={path="../parser"}
    vowlr-sparql-queries={path="../sparql_queries"}
