[package]
    authors=["khmikkelsen"]
    description="Parsers for various OWL and RDF formats supported by WebVOWL Reimagined"
    edition="2024"
    keywords=["parser", "owl", "rdf"]
    license-file="LICENSE"
    name="vowlr-parser"
    readme="README.md"
    repository="https://github.com/WebVOWL/WebVOWL-Reimagined"
    version="0.0.1"

[lib]
    crate-type=["cdylib", "rlib"]


[dependencies]
    futures="0.3.31"
    horned-owl={git="https://github.com/phillord/horned-owl", rev="c4f7835ecae70b5e7281dc23b9b7fc6daa497f1d"}
    log="0.4"
    rdf-fusion="0.1.0"
    tokio="1.48.0"
    tokio-stream="0.1.17"
