[package]
    authors=["khmikkelsen"]
    description="Parsers for various OWL and RDF formats supported by VOWL-R"
    edition="2024"
    keywords=["parser", "owl", "rdf"]
    license-file="LICENSE"
    name="vowlr-parser"
    readme="README.md"
    repository="https://github.com/WebVOWL/WebVOWL-Reimagined"
    version="0.1.0"

[lib]
    crate-type=["cdylib", "rlib"]


[dependencies]
    futures={workspace=true}
    horned-owl={workspace=true}
    log={workspace=true}
    rdf-fusion={workspace=true}
    serde="1.0"
    tokio={workspace=true}
    tokio-stream="0.1.17"
    vowlr-util={path="../util"}
