[package]
    authors=["TheRealMorgenfrue"]
    description="Client and server code for WebVOWL Reimagined"
    edition="2024"
    keywords=[
        "force-directed-graph",
        "graph",
        "ontology",
        "visualization",
        "web",
    ]
    license-file="LICENSE"
    name="webvowl-server"
    readme="README.md"
    repository="https://github.com/WebVOWL/WebVOWL-Reimagined"
    version="0.0.1"

[lib]
    crate-type=["cdylib", "rlib"]


[dependencies]
    actix-files={version="=0.6.6", optional=true}
    actix-web={version="=4.11.0", optional=true, features=[
        "macros",
        "compress-brotli",
        "compress-gzip",
    ]}
    console_error_panic_hook={version="0.1", optional=true}
    console_log={version="1.0", optional=true}
    env_logger={version="0.11", optional=true}
    getrandom={version="0.3", features=["wasm_js"]}
    http={version="1.3.1", optional=true}
    leptos={version="0.8.8", features=["nightly", "multipart"]}
    leptos_actix={version="0.8.5", optional=true}
    leptos_meta={version="0.8.5"}
    leptos_router={version="0.8.6", features=["nightly"]}
    log="0.4"
    rayon="1.10"
    reqwest={version="0.12.24", optional=true}
    strum="0.27"
    strum_macros="0.27"
    tokio={version="1.47.1", optional=true}
    wasm-bindgen={version="=0.2.100", optional=true}
    wasm-bindgen-futures={version="0.4.50", optional=true}
    wasm-bindgen-rayon={version="1.3.0", optional=true, features=["no-bundler"]}
    [dependencies.icondata]
        default-features=false
        features=[
            "ant-design-icons",
            "box-icons",
            "material-design-icons",
            "vs-code-icons",
            "ionicons",
        ]
        version="0.6.0"

    [dependencies.leptos-use]
        features=["on_click_outside", "use_preferred_dark"]
        version="0.16.3"


    [dependencies.thaw]
        features=["nightly"]
        # path="../thaw/thaw"
        branch="generic_tooltip"
        git="https://github.com/WebVOWL/thaw"
        version="0.5.0-beta"

    [dependencies.grapher]
        #branch="render_test"
        features=["webgl"]
        git="https://github.com/WebVOWL/RustGrapher"
        # optional=true
        # path="../RustGrapher"
        # version="0.3"

    [dependencies.web-sys]
        version="0.3.77"
        # https://docs.rs/web-sys/latest/web_sys/#modules
        features=[
            "Document",
            "Element",
            "Window",
            "FormData",
            "SubmitEvent",
            "FileList",
            "HtmlInputElement",
            "HtmlCollection",
            "Blob",
        ]


[features]
    csr=["leptos/csr"]
    hydrate=["leptos/hydrate", "thaw/hydrate", "nonce"]
    nonce=["leptos/nonce"]
    server=["dep:env_logger", "dep:reqwest", "dep:tokio", "leptos-use/actix"]
    ssr=[
        "dep:actix-files",
        "dep:actix-web",
        "dep:leptos_actix",
        "leptos/ssr",
        "leptos_meta/ssr",
        "leptos_router/ssr",
        "leptos-use/ssr",
        "thaw/ssr",
    ]
    wasm=[
        "dep:console_error_panic_hook",
        "dep:console_log",
        "dep:wasm-bindgen",
        "dep:wasm-bindgen-futures",
        "dep:wasm-bindgen-rayon",
        # "dep:grapher",
    ]


    [package.metadata.cargo-all-features]
        denylist=[
            "actix-files",
            "actix-web",
            "console_error_panic_hook",
            "leptos_actix",
            "wasm-bindgen",
        ]
        skip_feature_sets=[
            [
                "csr",
                "ssr",
            ],
            [
                "csr",
                "hydrate",
            ],
            [
                "ssr",
                "hydrate",
            ],
            [
            ],
        ]
