[package]
name = "webvowl-sparql-queries"
version = "0.0.1"
edition = "2024"
description = "Shared SPARQL query strings for WebVOWL-Reimagined (WASM-safe)."
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
    const_format = "0.2.35"
    [dependencies.grapher]
        # branch="new_nodetype"
        features=["webgl"]
        git="https://github.com/WebVOWL/WasmGrapher"
        # optional=true
        # path="../../../RustGrapher"
        # version="0.3"


