[package]
    description="Shared SPARQL query strings for VOWL-R (WASM-safe)."
    edition="2024"
    license="MIT OR Apache-2.0"
    name="vowlr-sparql-queries"
    version="0.1.0"

[lib]
    path="src/lib.rs"

[lints]
    workspace=true

[dependencies]
    const_format="0.2.35"
    grapher={workspace=true}
