[package]
    authors=["TheRealMorgenfrue", "LouiseWolff17"]
    description="Utility code used by the entire VOWL-R workspace"
    edition="2024"
    license-file="LICENSE"
    name="vowlr-util"
    readme="README.md"
    repository="https://github.com/WebVOWL/WebVOWL-Reimagined"
    version="0.1.0"

[lib]
    crate-type=["cdylib", "rlib"]


[dependencies]
    rkyv={workspace=true}
    serde={version="1.0", features=["derive"]}
